tests/langs/snapshots/r#mod__langs__base.go_type-alias.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 360
  l: "\trectangles = []*Rectangle\n"
  m: "  ^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 361
  l: "\tPolar      = polar\n"
  m: "  ^^^^^^^^^^^^^^^^^^  "
