tests/langs/snapshots/r#mod__langs__base.json_arrays.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
snapshot_kind: text
---
- n: 19
  l: "  \"outer\": [\n"
  m: "             ^^^"
- n: 20
  l: "    [1, 2, 3],\n"
  m: ^^^^^^^^^^^^^^^^
- n: 21
  l: "    [4, 5, 6],\n"
  m: ^^^^^^^^^^^^^^^^
- n: 22
  l: "    [7, 8, 9]\n"
  m: ^^^^^^^^^^^^^^^
- n: 23
  l: "  ]\n"
  m: "^^^  "
- n: 28
  l: "  \"data\": [\n"
  m: "            ^^^"
- n: 29
  l: "    {\"type\": \"user\", \"id\": 1},\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 30
  l: "    {\"type\": \"admin\", \"id\": 2},\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 31
  l: "    {\"type\": \"guest\", \"id\": 3}\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 32
  l: "  ]\n"
  m: "^^^  "
- n: 40
  l: "  \"tags\": [\"coding\", \"engineering\", \"AI\"]\n"
  m: "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 75
  l: "  \"values\": [\"first\", \"second\", \"third\"]\n"
  m: "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 93
  l: "  \"array_val\": [1, 2, 3]\n"
  m: "                 ^^^^^^^^^  "
- n: 112
  l: "  \"matrix\": [\n"
  m: "              ^^^"
- n: 113
  l: "    [1, 2],\n"
  m: ^^^^^^^^^^^^^
- n: 114
  l: "    [3, 4],\n"
  m: ^^^^^^^^^^^^^
- n: 115
  l: "    [5, 6]\n"
  m: ^^^^^^^^^^^^
- n: 116
  l: "  ]\n"
  m: "^^^  "
- n: 125
  l: "[\"first\", {\"type\": \"mixed\"}, [1, 2, 3]]\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 128
  l: "[\n"
  m: ^^^
- n: 129
  l: "  {\n"
  m: ^^^^^
- n: 130
  l: "    \"id\": 1,\n"
  m: ^^^^^^^^^^^^^^^^
- n: 131
  l: "    \"name\": \"First\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 132
  l: "  },\n"
  m: ^^^^^^
- n: 133
  l: "  {\n"
  m: ^^^^^
- n: 134
  l: "    \"id\": 2,\n"
  m: ^^^^^^^^^^^^^^^^
- n: 135
  l: "    \"name\": \"Second\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 136
  l: "  }\n"
  m: ^^^^^
- n: 137
  l: "]\n"
  m: "^  "
- n: 141
  l: "  \"scores\": [10, 20, 30, 40, 50]\n"
  m: "              ^^^^^^^^^^^^^^^^^^^^  "
- n: 146
  l: "  \"measurements\": [1.5, 2.7, 3.9, 4.1]\n"
  m: "                    ^^^^^^^^^^^^^^^^^^^^  "
- n: 162
  l: "    \"team\": [\n"
  m: "              ^^^"
- n: 163
  l: "      {\n"
  m: ^^^^^^^^^
- n: 164
  l: "        \"name\": \"Alice\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 165
  l: "        \"role\": \"lead\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 166
  l: "      },\n"
  m: ^^^^^^^^^^
- n: 167
  l: "      {\n"
  m: ^^^^^^^^^
- n: 168
  l: "        \"name\": \"Bob\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 169
  l: "        \"role\": \"developer\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 170
  l: "      }\n"
  m: ^^^^^^^^^
- n: 171
  l: "    ]\n"
  m: "^^^^^  "
