tests/langs/snapshots/r#mod__langs__base.json_empty_objects.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
snapshot_kind: text
---
- n: 121
  l: "  \"empty_obj\": {}\n"
  m: "                 ^^  "
